# architect-techtest

./: .env  .gitignore  README.md  main.py  pyproject.toml  vms.db
result/: terminal_dump.txt
sdk/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py  test_main.py
tests/unit/sdk/: test_client.py
